# Fitness_wellness

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
fitness_wellness/: hooks.py
fitness_wellness/billing/doctype/daily_cash_reconciliation/: daily_cash_reconciliation.json  daily_cash_reconciliation.py
fitness_wellness/billing/doctype/emi_schedule/: emi_schedule.json  emi_schedule.py
fitness_wellness/billing/doctype/membership_invoice/: membership_invoice.json  membership_invoice.py
fitness_wellness/billing/doctype/refund_request/: refund_request.json  refund_request.py
fitness_wellness/billing/doctype/walk_in_payment/: walk_in_payment.json  walk_in_payment.py
fitness_wellness/class_management/doctype/class_attendance/: class_attendance.json  class_attendance.py
fitness_wellness/class_management/doctype/class_enrollment/: class_enrollment.json  class_enrollment.py
fitness_wellness/class_management/doctype/class_package/: class_package.json  class_package.py
fitness_wellness/class_management/doctype/class_schedule/: class_schedule.json  class_schedule.py
fitness_wellness/class_management/doctype/class_type/: class_type.json  class_type.py
fitness_wellness/class_management/doctype/waitlist_entry/: waitlist_entry.json  (+1 more)
fitness_wellness/config/: desktop.py  docs.py
fitness_wellness/fixtures/: custom_fields.json  roles.json
fitness_wellness/public/: build.json
fitness_wellness/public/js/: fitness_wellness.js
fitness_wellness/templates/pages/: pages.html
fitness_wellness/utils/: calculations.py  notifications.py  validators.py
(+53 files in other folders)
