[project]
name = "fitness_wellness"
authors = [
    { name = "Your Organization", email = "admin@example.com"}
]
description = "Fitness and Wellness Management System for ERPNext v15+"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
frappe = ">=15.0.0"
